# bachelorproef

./: .gitignore  README.md
src/: README.md  build_test_datasets.py  ds_test_suite.py  experiments.md  lst_did_test.py  lst_full_test.py  lst_grid_search.py  lst_models_test.py  lst_sanity_test.py  paper_mentionables.md  pyproject.toml  raster_accuracy_test.py  render_ds_reports.py  render_stability_report.py  report.html  sandbox.ipynb  stdout_05_08.txt  validate_radius_fix.py
src/cache/: overpass-d24ba1fb8bf9cc6d266bd2772967dc0e2570ca16
src/ds/: build_full_datasets.py  build_test_datasets.py  cross_corr.py  morans_i.py  partial_corr.py  render_reports.py  render_stability_report.py  scenario_predict.py  simple_corr.py  spatial_cv.py  test_suite.py  utils.py
src/exploration/: catalog_report.html  catalog_report.py  db_overview.json  df_report.py  quick_ml.py  survey_sources.py  trees_sortiments.json  view_ingestion.py
src/gathering/: gather_all.py  gather_g3d.py  gather_lst.py  gather_trees.py  gather_wis.py  ghent_polygon.py  ghent_polygon.test.py  landsatlst.json  lst_resolve_download_urls.py  lst_resolve_urls.py  lst_responses.jsonl  lst_url.py  plot_trees.py  unzip.py  unzip_lst.py  view_wis.py
src/ml/: __init__.py  base.py  did.py  preprocessing_report.py  registry.py  sanity.py  scaler.py  train.py  transforms.py
src/processing/: catalog.py  config.py  db.py  ingest.py  ingest_dhm.py  ingest_lst.py  ingest_spatial.py  ingest_trees.py  migrate_tile_columns.py  prepare_all_for_streams.py  process_dhm_tifs_to_parquet.py  process_lst_tifs_to_parquet.py  process_tifs_to_parquet.py  process_urban_atlas.py  spatial.py
src/stream/: config.py  geo.py  (+10 more)
(+32 files in other folders)
