[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datashader>=0.18.2",
    "duckdb>=1.4.0",
    "ezdxf>=1.4.3",
    "fastparquet>=2026.3.0",
    "geopandas>=1.1.3",
    "h3>=4.4.2",
    "ijson>=3.5.0",
    "linearmodels>=7.0",
    "matplotlib>=3.6.0",
    "mlflow>=3.10.1",
    "osmpythontools>=0.3.6",
    "plotly>=6.7.0",
    "pyarrow>=23.0.1",
    "pyproj>=3.7.2",
    "rasterio>=1.5.0",
    "requests>=2.32.5",
    "rtree>=1.4.1",
    "scikit-learn>=1.3.0",
    "shap>=0.51.0",
    "shapely>=2.1.2",
    "sweetviz>=2.3.3",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
    "zarr>=3.1.0",
]
